assets/css/style.css
@font-face {
  font-family: "fluorine";
  src: url("/assets/fonts/FluorineMicro.ttf") format('truetype');
}

@font-face {
  font-family: "kiwisoda";
  src: url("/assets/fonts/KiwiSoda.ttf") format('truetype');
}

@font-face {
  font-family: "cozette";
  src: url("/assets/fonts/CozetteVector.otf") format('opentype');
}

@font-face {
  font-family: "lekomajuna";
  src: url("/assets/fonts/leko majuna sin.ttf") format('truetype');
}

@font-face {
  font-family: "lusi";
  src: url("/assets/fonts/musi-leko-tan-jan-Lusi.ttf") format('truetype');
}

@font-face {
  font-family: "disco";
  src: url("/assets/fonts/DigitalDisco.ttf") format('truetype');
}

:root {
  --color-bg: #fee;
  --color-bg-faint: #fee;/*d;*/
  --color-raised: #dcc;
  --color-fg: #000;
  --color-fg-faint: #000d;
  --color-accent-fg: #900;
  --color-accent-fg-faint: #9337;
  --color-accent-bg: #f66;
  --color-accent-bg-faint: #f779;
}

.main-window {
  max-width: 710px;
  padding: 5px;
  margin-left: auto;
  margin-right: auto;
  background-color: var(--color-accent-bg);
  color: var(--color-bg);
  font-family: cozette;
  font-size: 13px;
}

.window-header {
  font-size: 13px;
  display:flex;
  justify-content: space-between;
  padding: 5px 5px;
  margin-bottom: 5px;
  background-color: var(--color-accent-fg);
  box-shadow:
    -2px -2px #fff,
    2px 2px #000
  ;
  p {
    margin: 0px;
    a {
      color: white
    }
  }
}

.main-paper {
  width: auto;
  background-color: var(--color-bg-faint);
  color: var(--color-fg);
  padding: 20px 50px;
}

html, body {
  margin: 0;
  height: 100%;
}

body {
  background-image: url("/assets/img/stars_bg.png");
  background-attachment: fixed;
  background-position: center;
}

h1 {
  font-size: 48px;
  font-family: kiwisoda;
  font-weight: normal;
  text-shadow: 3px 3px 1px var(--color-accent-fg-faint);
  margin: 0px;
  margin-bottom: 6px;
  text-decoration: underline;
}

h1.sitelen-pona {
  font-family: lusi;
  font-size: 48px;
}

h2 {
  font-size: 32px;
  font-family: kiwisoda;
  font-weight: normal;
  text-shadow: 2px 2px 1px var(--color-accent-fg-faint);
  margin: 0px;
  margin-top: 13px;
  margin-bottom: 4px;

  span.sitelen-pona {
    display: inline-block;
    font-size: 32px;
    line-height: 32px;
    height:32px;
    vertical-align: middle;
  }
}

h2.byline {
  margin-top: -12px;
  margin-bottom: 8px;
}

h2.sitelen-pona {
  font-family: lusi;
  font-size: 32px;
}

h3 {
  font-size: 16px;
  font-family: kiwisoda;
  font-weight: normal;
  text-shadow: 1px 1px 1px var(--color-accent-fg-faint);
  margin-bottom: 4px;
}

p {
  margin: 0px;
  margin-bottom: 5px;
  b {
    text-shadow: 1px 1px 1px var(--color-accent-fg-faint);
    font-weight: normal;
  }
}

span.latin {
  font-family: cozette;
  font-size: 13px;

  display: inline-block;
  vertical-align: middle;
  padding-bottom: 3px;
}

ul {
  margin-top: 0.25em;
}

a {
  color: var(--color-accent-fg);
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.compact {
  margin-top: 0.25em;
}

.preserve-whitespace {
  white-space: pre;
  overflow-x: scroll;
  line-height: 100%;
}

.inverted {
  background-color: var(--color-accent-fg);
  color: var(--color-bg);
  font-weight: bold;
}

.sitelen-pona {
  font-family: lekomajuna;
  font-size: 16px;
  a {
    text-decoration-thickness: 2px;
  }
  ul {
    list-style-type: "\F199C"
  }
  b {
    text-shadow: 2px 2px var(--color-accent-fg-faint);
    font-weight: normal;
  }
}

p, li, a {
  span.sitelen-pona {
    display: inline-block;
    line-height: 13px;
    height:13px;
    vertical-align: middle;
  }
}

table, th, td {
  border: 1px solid var(--color-fg);
  border-collapse: collapse;
  text-align: center;
}

.left {
  text-align: left;
}

table {
  transform: translateZ(0);
  margin: auto;
  margin-top: 1em;
  margin-bottom: 0.25em;
}

th, td {
  padding-left: 3px;
  padding-right: 3px;
}

input[type="checkbox"] {
  width: 12px;
  margin: 0px;
}

.scroll-container {
  overflow-x: scroll;
  text-wrap: nowrap;
}

.code-inline{
  background-color: var(--color-raised);
  border-radius:5px;
  color: var(--color-fg);
  border-color: var(--color-raised);
  border-style: solid;
  border-width: 2px;
}

code {
  font-family: "toshibatx";
  border-radius: 4px;
}

pre code.hljs.compact {
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

pre code b{
  font-weight:bold;
}

hr {
  background-color: var(--color-fg);
  border-width:0;
  height:1px;
}

p code.hljs {
  padding:1px 4px 1px 4px;
}

li code.hljs {
  padding:1px 4px 1px 4px;
}

ul {
  list-style-type: "- ";
  padding-left: 2em;
}

li {
  margin-bottom: 0.5em;
}

.hatched {
  background-image: url("/assets/img/hatch.png");
  image-rendering: pixelated
} 

.body-image {
  width: 100%;
  box-shadow: -2px -2px var(--color-accent-bg), 2px 2px var(--color-fg);
  border: 2px solid var(--color-bg);
  margin-bottom: 5px;
}

.small-body-image {
  box-shadow: -2px -2px var(--color-accent-bg), 2px 2px var(--color-fg);
  border: 2px solid var(--color-bg);
  margin: auto;
  margin-bottom: 13px;
  display: block;
  max-width: 100%;
}

.book-cover {
  height: 180px;
  box-shadow: -2px -2px var(--color-accent-bg), 2px 2px var(--color-fg);
  border: 2px solid var(--color-bg);
  margin: 0px 0px 10px 15px;
  float: right;
  image-rendering: pixelated;
}

p.caption {
  width: 95%;
  margin: auto;
  margin-bottom: 6px;
  margin-top: -10px;
  text-align: center;
}

p.top-caption {
  margin-top: 13px;
  margin-bottom: 4px;
  text-align: center;
}

p.sitelen-pona {
  margin-bottom: 8px;
}

.no-shadow {
  text-shadow: none;
}

.spoiler {
  background-color: var(--color-fg);
}

